--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --color-three:  rgba(191, 172, 149, 1);
     --color-four: rgba(140, 134, 47, 1); 
     --color-five: rgba(191, 183, 68, 1);
+    --color-five-variant: rgba(191, 183, 68, 0.4);
     --color-six: rgba(165, 138, 114, 1);
     --color-seven: rgba(251, 251, 251, 1);
     --main-font-family: 'Merriweather', serif; 
@@ -14,7 +15,7 @@ body {
     background-color: var(--color-seven);
     color: var(--color-six);
     font-family: var(--main-font-family);
-    width: 100vw;
+    width: 100%;
     height: 100vh; 
 }
 
@@ -27,6 +28,7 @@ header {
     justify-content: center;
     margin-bottom: 25px;
 }
+
 h1 {
     margin: 0px;
     text-transform: uppercase;
@@ -104,9 +106,8 @@ input[type="text"]:focus,
 textarea:focus {
     outline: none;
     color: black;
-    background-color: var(--color-five);
-    opacity: 0.2;
-    transition: background-color 1s ease-in;
+    background-color: var(--color-five-variant);
+    transition: background-color 0.7s ease-in;
 }
 
 #full-name::placeholder,
