--- a/css/styles.css
+++ b/css/styles.css
@@ -144,8 +144,9 @@ fieldset {
 .news-legend,
 .contact legend {
     margin-top: 20px;
-    font-size: 1.2em;
+    font-size: 1.3em;
     color: var(--color-one);
+    font-weight: 800;
 }
 
 .suggestions {
@@ -177,3 +178,43 @@ footer {
     height: 200px;
 }
 
+@media screen and (min-width: 768px) {
+ main section,
+ main form {
+     max-width: 800px;
+     margin: 0 auto;
+ }
+
+ .side-by-side{
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+ }
+
+ input[type="text"],
+ #email,
+ #state, 
+ #phone {
+     max-width: 60%;
+     margin-bottom: 25px;
+ }
+
+ .zip {
+     max-width: 67%;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+ }
+ .zip input {
+     max-width: 40%;
+     align-self: baseline;
+ }
+
+ textarea {
+     height: 10%;
+ }
+
+ #submit {
+     height: 75px;
+ }
+}
